# baseball-api-wrapper

./: README.md  pyproject.toml
baseball_api/: __init__.py
baseball_api/modules/: teams.py
baseball_api_wrapper/: __init__.py  client.py
baseball_api_wrapper/modules/: games.py  players.py  roster.py
tests/: test_games.py  test_players.py  test_roster.py  test_teams.py
