[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball-api-wrapper"
version = "0.1.0"
description = "A Python wrapper for the official MLB Stats API (https://statsapi.mlb.com)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
# Install dev/test tools with: pip install -e ".[dev]"
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",   # Mock HTTP responses in tests
]

[tool.setuptools.packages.find]
# Automatically discover all packages (baseball_api_wrapper and sub-packages)
where = ["."]
include = ["baseball_api_wrapper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["baseball_api_wrapper"]
omit = ["tests/*"]
